[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/menus/pages/mods/menu_mods.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/menus/pages/mods/mod_info_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/themes/panel/panel_style.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/menus/pages/mods/mod_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/fonts/actual/base/font_60_outline.tres" type="DynamicFont" id=6]

[node name="MenuMods" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 1 )
mod_container_scene = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 980.0
custom_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 1720.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 6 )
text = "MENU_MODS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 1720.0
margin_bottom = 694.0
custom_constants/separation = 25

[node name="ModList" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.788235 )
margin_right = 847.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/ModList"]
margin_left = 5.0
margin_top = 5.0
margin_right = 842.0
margin_bottom = 495.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/ModList/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 822.0
margin_bottom = 475.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ModListContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ModList/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 807.0
size_flags_horizontal = 3

[node name="ModInfoContainer" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 560.0
margin_top = 744.0
margin_right = 1160.0
margin_bottom = 809.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkshopButton" type="Button" parent="VBoxContainer/Buttons"]
unique_name_in_owner = true
visible = false
margin_right = 600.0
margin_bottom = 65.0
text = "MENU_WORKSHOP"

[node name="BackButton" type="Button" parent="VBoxContainer/Buttons"]
unique_name_in_owner = true
margin_right = 600.0
margin_bottom = 65.0
text = "MENU_BACK"

[connection signal="pressed" from="VBoxContainer/Buttons/WorkshopButton" to="." method="_on_WorkshopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/BackButton" to="." method="_on_BackButton_pressed"]
